# syncr

./: .gitignore  LICENSE.md  README.md  SConstruct  dev-requirements.txt  pyproject.toml  requirements.txt  sample.sconstruct.ini  setup.cfg  syncr.sublime-project
config/: default.toml  iring.toml  private.toml
sample/: default.toml
src/: common.py  finder.py
src/finder/: command_search.py  common.py  finder.py
src/syncr/: command_search.py  command_sync.py  common.py  syncr.py
support/: build_venv.ps1  build_venv.sh  sample.path.ini
