[project]
name = "syncr"
version = "0.0.1"
license = "MIT"
description = "{cookiecutter.description}}"
authors = [
    { name = "Troy Williams", email = "troy.williams@bluebill.net" }
]
readme = "README.md"

# requires-python = ">= 3.12"
dependencies = [
    "click",
    "rich",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
    "black",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/syncr"]

[project.scripts]
syncr="syncr.syncr:main"